--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">KINGS</div>
+            <h1 class="logo">KINGS</h1>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -21,9 +21,7 @@
     </header>
     <section id="home" class="hero">
         <h1>Welcome to Kings Barber</h1>
-        <p>Where we enhance your attractiveness by just cutting your hair
-            <br> THAT'S HOW GOOD WE ARE!
-        </p>
+       
         <a href="#about" class="btn">Learn More</a>
     </section>
     <section id="about">
